workloads/everse-platform/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: everse
  labels:
    app.kubernetes.io/part-of: everse-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
